#pragma once

#include <Common/String.h>

//======================================================================================================================
namespace render {
    //==================================================================================================================
    enum class RendererType {
        OpenGl,
        Vulkan,
        Direct3d,
        Sdl,
    };
}

//======================================================================================================================
String str(render::RendererType) noexcept;
